--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
 
 :root {
   --background: #ffffff;
@@ -8,7 +11,10 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+
+ 
+  --font-sans: var(--font-poppins);
+  --font-alt: var(--font-geist-sans); 
   --font-mono: var(--font-geist-mono);
 }
 
@@ -22,5 +28,38 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), sans-serif; 
 }
+/* Slick dots positioning inside slider */
+.slick-dots {
+  position: absolute;
+  bottom: 65px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+ display: flex !important;
+ gap: 40px;
+ justify-content: center;
+}
+
+/* Inactive dots */
+.slick-dots li button:before {
+  content: '';
+  width: 17px;
+  height: 17.25px;
+  background-color: #D9D9D9;
+  border-radius: 50%;
+  
+  transition: all 0.3s ease;
+  opacity: 1; 
+}
+
+/* Active dot */
+.slick-dots li.slick-active button:before {
+  background-color: #CC7722 !important;
+  transform: scale(1.1);
+  opacity: 1;
+}
+
+
+
