--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
+@layer utilities {
+  .cursor-black {
+    cursor: url('/black-cursor.svg'), auto;
+  }
+}
 
 :root {
   --background: #ffffff;
